--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Comparator</string>
 
-    <string name="templates_title">TemplatesFragment</string>
+    <string name="templates_title">Templates</string>
 
     <string name="template_name_hint">Template name</string>
     <string name="template_data_hint">Attributes</string>
-    <string name="template_button">Submit</string>
+
+    <string name="apply">Apply</string>
 </resources>
