Add dialog for setting item name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="template_data_title">Attributes</string>
     <string name="template_data_hint">##Performance\nCPU\nRAM\nStorage\n##Screen\nResolution\nScreen size</string>
 
+    <string name="item_new">New item</string>
+    <string name="item_edit_name">Edit item name</string>
+
     <string name="edit">Edit</string>
     <string name="apply">Apply</string>
     <string name="cancel">Cancel</string>
