--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="edit">Edit</string>
     <string name="apply">Apply</string>
     <string name="cancel">Cancel</string>
+
+    <string name="comparison_title">Comparison</string>
 </resources>
